RESOLVED FIXED240102
[JSC] Intl.NumberFormat lacks some validation for rounding-increment
https://bugs.webkit.org/show_bug.cgi?id=240102
Summary [JSC] Intl.NumberFormat lacks some validation for rounding-increment
Yusuke Suzuki
Reported 2022-05-04 17:39:55 PDT
[JSC] Intl.NumberFormat lacks some validation for rounding-increment
Attachments
Yusuke Suzuki
Comment 1 2022-05-04 17:42:24 PDT
EWS
Comment 2 2022-05-04 19:22:21 PDT
Committed r293813 (250286@main): <https://commits.webkit.org/250286@main> Reviewed commits have been landed. Closing PR #517 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-05-04 19:23:13 PDT
Michael Catanzaro
Comment 4 2022-05-05 07:11:07 PDT
It introduced failures when running with cloop: Running stress/intl-numberformat-rounding-increment-resolved-match-v3.js.default stress/intl-numberformat-rounding-increment-resolved-match-v3.js.default: Exception: RangeError: maximum and minimum fraction-digits are not equal while roundingIncrement is specified stress/intl-numberformat-rounding-increment-resolved-match-v3.js.default: NumberFormat@[native code] stress/intl-numberformat-rounding-increment-resolved-match-v3.js.default: @intl-numberformat-rounding-increment-resolved-match-v3.js:39:35 stress/intl-numberformat-rounding-increment-resolved-match-v3.js.default: forEach@[native code] stress/intl-numberformat-rounding-increment-resolved-match-v3.js.default: global code@intl-numberformat-rounding-increment-resolved-match-v3.js:38:32 stress/intl-numberformat-rounding-increment-resolved-match-v3.js.default: ERROR: Unexpected exit code: 3 FAIL: stress/intl-numberformat-rounding-increment-resolved-match-v3.js.default Running stress/intl-numberformat-rounding-increment-v3.js.default stress/intl-numberformat-rounding-increment-v3.js.default: Exception: RangeError: maximum and minimum fraction-digits are not equal while roundingIncrement is specified stress/intl-numberformat-rounding-increment-v3.js.default: NumberFormat@[native code] stress/intl-numberformat-rounding-increment-v3.js.default: @intl-numberformat-rounding-increment-v3.js:52:26 stress/intl-numberformat-rounding-increment-v3.js.default: forEach@[native code] stress/intl-numberformat-rounding-increment-v3.js.default: global code@intl-numberformat-rounding-increment-v3.js:51:32 stress/intl-numberformat-rounding-increment-v3.js.default: ERROR: Unexpected exit code: 3 FAIL: stress/intl-numberformat-rounding-increment-v3.js.default stress/intl-numberformat-rounding-increment-value.js.default: Exception: RangeError: maximum and minimum fraction-digits are not equal while roundingIncrement is specified stress/intl-numberformat-rounding-increment-value.js.default: NumberFormat@[native code] stress/intl-numberformat-rounding-increment-value.js.default: global code@intl-numberformat-rounding-increment-value.js:7:31 stress/intl-numberformat-rounding-increment-value.js.default: ERROR: Unexpected exit code: 3 FAIL: stress/intl-numberformat-rounding-increment-value.js.default I suppose I'd better print the values that are being compared to see what's up.
Yusuke Suzuki
Comment 5 2022-05-05 12:45:11 PDT
Angelos Oikonomopoulos
Comment 6 2022-05-05 13:50:48 PDT
Michael Catanzaro
Comment 7 2022-05-06 07:33:43 PDT
(In reply to Yusuke Suzuki from comment #5) > Committed r293858 (250323@trunk): <https://commits.webkit.org/250323@trunk> Thanks, that fixed it.
Note You need to log in before you can comment on or make changes to this bug.